[package]
name = "sawtooth_stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

# [profile.dev]
# opt-level = 2

# [profile.release]
# opt-level = 3
